--- a/_posts/2000-01-01-未完成作品合集.md
+++ b/_posts/2000-01-01-未完成作品合集.md
@@ -64,6 +64,28 @@ categories: 小说 未完成 朵朵
 
 和上文差不多，不过写的更少。至于为什么会有两个土拨鼠键盘而且一模一样，这本身就是一个神秘的故事了。
 
+# 卡门
+
+网络版卡门，只写了个开头。
+
+# 日记一则
+
+难得地记录了写作时间：2002年2月15日
+
+# 闯红灯记
+
+接着应该是中考或者高考结束之后真的闯了一次红灯，但之后的情节怎么安排就记不清了。
+
+几年之后我真的问过一位德国朋友，他们是否过马路一定要走人行道，哥们无奈地说我们德国人该过马路的时候也是要过马路的（估计心想亚洲人怎么都这么逗比）……至于我自己，有一次在新加坡勇敢地抢在一辆警车之前横跨马路，等我发现那是一辆警车的时候差点吓尿了。当然对方呼啸而去根本没屌我。
+
+# 扑扑和他的朋友们
+
+严格地说不是未完结，而是投稿了proposal之后别人没理我。
+
+# 关于龙的起源及其他……
+
+这个应该就是“猫的故事”的续篇。
+
 <hr>
 2016-06-05
 
@@ -634,3 +656,115 @@ Dr. Pawpaw——木瓜博士。
 “我要做一件了不起Ｎ倍的事情，Ｎ大于一！”
 
 直到有了一点眉目，小琪才把自己的计划告诉给王子听。原来……（未完待续）
+
+# 卡门
+
+```
+第一幕
+在西維爾城一個廣場旁，有一家香煙廠和一個哨站。米卡埃拉來到找她的愛人唐荷西。哨兵進行了換班儀式。接班的士兵由蘇尼加中尉率領，副隊長是唐荷西下士。香煙廠女工出來休息，卡門也在其中，她唱了一首<哈巴奈拉舞曲>，嘲弄一群追逐她的裙下之臣。荷西對卡門視若無睹，引起了她的興趣，擲了一朵花給他。米卡埃這次找到荷西，代他母親送上一封信和一個吻。米卡埃拉離開後，工廠傳出一聲尖叫，原來是卡門與人打架，用刀傷了另一名女工。蘇尼加逮捕了她，交給荷西看管。卡門唱了一首<塞桂第拉舞曲>，哄誘荷西放了她。結果荷西給送進了監牢。
+
+第二幕
+在城郊的小旅館裡，卡門與一群女友唱歌跳舞，娛樂蘇尼加和其他士兵。名氣響噹噹的鬥牛士埃斯卡米洛在簇擁人群的歡呼聲中來到。他唱了一首<鬥牛勇士之歌>，帶著一群擁躉繼續慶祝。卡門與吉卜賽走私販子商量怎樣引開士兵的注意，繼續運送私貨。這時剛出獄的荷西進來了，卡門哄誘他抗士兵回營的號聲。荷西坦言愛上了她，但不肯做逃兵。蘇尼加這時又重返旅館，想與卡門共度一夜。荷西與他打了一場。荷西再無選擇，只好加入走私販子行列。
+
+第三幕
+在山中，走私販子預備分發走私貨物。荷西這時才認識到卡門本性用情不專，兩人關係開始變壞。卡門與吉卜賽女友玩紙牌算命，總抽到死亡牌。埃斯卡米洛前來探望卡門，荷西大為憤怒，要跟他決鬥，幸給卡門和其他吉卜賽人阻止。埃斯卡米洛離開前，邀請眾人同去參觀他鬥牛。這時，米卡埃拉出現，告訴荷西他的母親病重垂危。荷西答應回去，但警告卡門，他將會回來與她共渡一生。
+
+第四幕
+在鬥牛場外，群眾興奮地歡迎鬥牛士魚貫進場。埃斯卡米洛與卡門互道愛意。卡門知道荷西守在一旁，輕蔑地向他走近，告訴她已不再愛他，決定離開他，並將荷西昔日給她的戒指除下，拋在地上。鬥牛場內群眾為埃斯卡米洛的勝利高聲歡呼之際，荷西用刀殺死卡門，跪在她身旁痛哭。
+```
+
+在一个叫 雪茄驿站 的聊天室——本如其名只是个说闲话的地方，来了一群 女烟民 女士。其中一个叫做 卡门 的才思敏捷，言语放荡，引起众人追逐。卡门嘲弄了他们。网管荷西对卡门熟视无睹，引起了她的兴趣，献给了他一朵文本玫瑰花。然后卡门和另一个女烟民吵架，卡门刷了屏，网管荷西要把她踢出去。卡门引诱荷西放了他。最后荷西和卡门被双双踢了出去。（待续）
+
+# 日记一则
+
+——2002年二月十五日
+
+夫日记，切要开宗明义，说明此日有什么大事发生。今天的大事，就是“何夫人啥啥演唱会”——演唱会的名字没记住，赞助商倒是深入我心，可见这样做广告还是有道理的。
+
+话说在下以前也是个喜欢摇滚的青年，也曾经喜欢过一阵什么黑豹、唐朝之类的东西。相信二十多岁的同龄人……（待续）
+
+# 此地无钱三百块
+
+（按：原文档空白，只有一个标题）
+
+# 闯红灯记
+
+据说，中华民族和日尔曼民族在对待“纪律”、“规则”之类的东西的态度上，正好是两个极端。跟据很多学问大得可怕的先生们的说法，深更半夜在一个人迹罕至的十字路口，在除了红绿灯之外什么都没有的情况下，百分之九十以上的日尔曼人仍然会一如既往地遵守交通规则。无他，他们的教育使得他们的血液里都含有一种叫做“遵纪蛋白”的成分。
+
+当然，最后一句话是个不太可笑的笑话。
+
+至于中国人，你我都清楚得很；大家又都不是阿Ｑ，犯不着搬出什么“大丈夫向时而动”之类的道理武装自己。落实到个人身上，不外就是两个回答：To be, or not to be?
+
+不说假话，在我小的时候，真的是不闯红灯的，甚至还会正义地“斥责”过闯红灯的父亲。思想其实倒也单纯：德国人能做到严格遵守交通规则，中国人为什么不能？至少我们这一代会……如何如何。结果随着年龄的增长（主要还是学习压力的加重），对很多事情的态度都变得随便起来。交通规则？对不起，我赶着去学校早自习；至于改变中国人的思想面貌，多我一个不多，少我一个不少，在下恕不奉陪。
+
+这就是成长吗？当然不能这么说，但是恐怕即使是那些伟大的学者，也不能断然否定吧。毕竟这是一种现象，而且是一种“比较”常见的现象。
+
+这也许就是中国之所以成为中国的原因。请注意，我这句话绝对没什么贬义。
+
+
+
+在我所在的城市，自从我上初二那一年开始，出台了这样一项规则：以往对于骑自行车闯红灯且被抓——这三个字一定要加上——者的处罚，和随地吐痰等一样，不过是罚款罢了；惩罚无所谓轻重，但也绝没什么特殊。但现在，闯红灯者必须手持一面写着“遵守交通规则”的小旗子在路口站上半个小时，以示薄惩。不用说，经过这么整理的人，必然身心两方面都将受到强烈冲击。而且事实说明这个方法的确不无用处，最明显的，就是摇旗者可以起到罚款所不能及的全面的警示作用。
+
+但是我却一直想尝尝这种本意是羞辱的惩罚到底是什么滋味。理由很简单，这招最大的杀伤力在于熟人之间产生的舆论，而这对我这样的青少年正好没有什么作用。不会有上司谈话，不会有同事在背后指指点点，我怕什么呢？而且这种实践不光有趣，将来也可以将体验写成作文，一定会比较生动。
+
+但是，这不过是说说而已罢了。学生的时间是宝贵的，尤其是初二，正是理科全面发展的时候，稍微把握不好成绩就会落后；更别提这还是青少年犯罪的“危险年龄”了，被上纲上线反而不妙。反正这种机会有的是，等放假再说吧。生活可不会像“警察和赞美诗”那样富有戏剧性。
+
+但是放假也不轻松，补课班满天飞，再加上提前开学，仅有的几天时间都用来做“最后的疯狂”玩过去了，根本就没想起来“红灯体验”这码事。转眼就到了初三，马上就面临中考了，背政治都背不过来，哪有时间搞那种无聊事？那件事也就在紧张的学习中渐渐被淡忘了。
+
+（未完待续，后面的一句和本文无关的话不知为何出现再原文档中）
+
+钢铁阿丹 Steely Dan Stand: Lovers (the lover)
+
+# IT科普文
+
+我在“撰稿人之家”看到了贵社（不过在下其实不知道究竟是什么社，还请告知）关于儿童计算机丛书的策划意见。我拟以一个小动物“扑扑”（长得像猫，不过有两个小翅膀，还穿着衣服，喜欢说“噗噗”，见我的附图）为线索人物，依次介绍“扑扑的朋友们”——CPU, motherboard, monitor, video card, etc.——至于软件，扑扑当然也可以介绍电脑使用方面的知识。为此写了一个假想稿，标题“七”纯属虚构，没什么实际意义。
+
+当然我的设想和您“每篇500字的计算机童话故事”有些出入，但这只是个设想，如果您感兴趣，可以想一些别的东西。比如扑扑和电脑病毒大战什么的（对不起，总想着扑扑）。呵呵……其实主要是看见您写的“每信必复”，想顺便跟您学习学习的 *^^* 请一定和我联系，非常感谢！（至少告诉我“你的设想一无是处”啊……玩笑）
+
+很显然，“扑扑”和总是kupu kupu的Moogle还有Hello Kitty很像……不过可爱一些总是好的。
+
+另外不知贵刊对游戏类书籍有没有兴趣？拳皇最新资料、街机游戏秘籍、模拟器、游戏机性能详解之类的东西（我收集了很多这方面的资料，也有一些这方面的朋友）。再议！
+
+～～～～～～～～～～～～～～～～～～～～～～～～～～～～～～
+
+## 扑扑和他的朋友们（七）
+
+——鼠标篇
+
+大家好！我扑扑又和大家见面啦！噗噗～！这次我要为小朋友们介绍的呀，是一只小老鼠——不对不对，是鼠标呀！他也是我的一位好朋友，就请他自我介绍一下吧！
+
+“小朋友们好！其实你们叫我‘小老鼠’也可以，因为呀，我的名字在英语中和‘老鼠’是一个词儿（Mouse [maus]）。你还别说，我长得还真跟老鼠挺像的！尤其是我身后那条和计算机相连的线，真像老鼠的尾巴。不过我的身上可没有毛啊，哈哈！我的姓‘鼠’字体现了我的外表，我的名字‘标’字体现了我的用处——标注，标准；我只要一动，屏幕上的光标也跟着动，是不是很神奇！”
+
+谢谢你的自我介绍，噗噗～！鼠标不仅长得可爱，他和咱们上次介绍的键盘还是好朋友呢！不过，他比键盘的岁数要小得多。以前，计算机的速度慢，只能处理文字信息，那时，键盘是人们的好伙伴。科学家叔叔们想（按：在下小时候，科学家叔叔要比科学家阿姨多得多。这不是重男轻女的问题，而是“科学家叔叔阿姨”太长了的缘故……笑），如果只能通过文字和计算机交流，大家就得背好多好多计算机的话，这多不方便呀！所以他们研究了能通过图形和人们交流的软件，但是，处理图形要比处理文字慢得多。不过后来，计算机的速度越来越快，大家终于都用上了图形界面的计算机！噗噗～！太好啦！但是键盘输入文字很方便，和图形打交道却不太擅长，怎么办呢？看来人们需要一种新工具！所以科学家叔叔研究了鼠标，你把鼠标握在手里，然后移动你的手，屏幕上就有一个小箭头跟着动。接着你把箭头移动到你感兴趣的东西上，按动鼠标上的按钮，就可以执行相应的操作啦！噗噗～！真方便。对了鼠标，你介绍一下你的家族成员好吗？
+
+“……（光电、机械鼠标介绍）”
+
+（串口、PS/2鼠标介绍）
+
+好啦！鼠标，谢谢你！噗噗～！下一次，我扑扑将给大家介绍鼠标的亲戚——轨迹球和光笔。再见！
+
+# 关于龙的起源及其他……
+
+……所谓人类的文明史，似乎波澜壮阔，但其实充满了愚昧、迷信及自相残杀；人类的前进，远不如一般人想象中的那样线性。“螺旋型上升”不过是个比喻罢了，事实上，在历史的阴影中，中人类的停顿、甚至倒退简直让人窒息。暂且不论中国封建统治中“自古忠臣多枉死，常使英雄泪满襟”的持续了两千年的无奈，就连欧洲著名的“黑暗的中世纪”，也是令人绝望的的几个世纪啊……几代甚至几十代的人民就在悲哀中度过自己的一生，莫非这就是人类引以为豪的“文明”？
+
+但愈是了解人类悲哀的文明史，我们便会愈加对人类充满希望；因为我们知道，人类还有另一部历史，那就是“科学”。科学不是思想，不是工具，而是一种哲学，一种光明的世界观。科学不单是数学、物理等特定的“学问”，它还包含了人类所有进取的、正面的希望和努力；正是由于这个原因，科学被称为“第一推动”。这个词其实来源于宗教，即所谓“上帝创造世界，就是在宇宙形成的一刹那给了整个世界一个‘推动’”；微积分的奠基人、理学三定律的总结者、万有引力的完美证明者牛顿晚年就致力于寻找这个“第一推动”，求证上帝的存在。不能认为牛顿晚年在神学方面的努力是他人生的污点，毕竟只要是为自己坚信的东西努力的人就不容蔑视，致力于神学理论远不如他曾经利用权势打压莱布尼兹来得更被后人指目；但是我们毕竟不得不说，只有科学，人类思想力、行动力的精华，才称得上人类的“第一推动”。即使人类有各种各样的黑暗面，甚至围绕着科学产生了很多负面的东西，但科学本身是形而上的，是独立的、永远正确的、积极进取精神。
+
+与其讨论科学发展的速度，不如考虑其加速度更为精确。学过简单的运动学知识的朋友都知道，加速度的改变远比速度本身的改变对速度的影响更大。为这句稍嫌抽象的话加以注释的话，一个很好的例子就是外太空计划。众所周知，人类的足迹早就登上了月球，但为什么至今还没有（甚至仅仅是论证过的打算）在太阳系的其它行星上立足呢？原因很简单，促使人类登月的“加速度”乃是冷战及其宣传，这个因素现在已经不复存在了。俗话说得好，“扫盲要从作家开始”；太多津津乐道于火星之行的专栏作家（科幻除外）对科学本身根本就是一知半解。受到他们蛊惑的公众有必要了解，“向外太空进军”是一句多么富于“大跃进”精神的话
+！在这方面，就算是政客也比那些记者和作家来得更冷静和理智一些。
+
+不过话说回来，目前人类科学仍然有其盲区，物理中的所谓“奇点”就是众人皆知的例子。现代科学现在可以跨越若干亿年，研究若干光年外的物体(*1)，可以深入到夸克层面进行理论研究，但行动上却连太阳系都无力飞出；甚至对这个我们一直居住的地球，我们对其深处的了解也比太阳以及更远的恒星的内部结构的了解少得多……
+
+——摘自《探索与展望》2002年第五期，P61
+
+
+
+朵朵把手头的杂志扔在一边。“真是无聊啊……”她抱怨道，“满天都是语重心长的说教，难道就没有什么有意思的东西吗？”
+
+小龙正在专注于Garfield(*2)漫画，因此没有理她。话说朵朵总是随口说一些毫无边际的话，她口里说着“没意思”，其实正是很感兴味的表现呢！真是个有趣的人。更何况在周末把积攒了一周的Garfield漫画看完是龙龙的一大嗜好，地道的美式幽默的确别有一番风味。
+
+
+*1：	插句笑话。记得某作家就赫然写过“要花多少多少‘光年’才能到达某某”这样的有趣文字……
+
+*2：	Garfield就是著名的加菲猫，不会有人不知道吧！说起来，Garfield可是世界三大名猫（Garfield，Doraemon——机器猫，HelloKitty）之首（？）的知名猫物，端的非同凡响。由美国漫画家Jim David创作，连载至今（但Garfield的配音去世了，默哀中……）。
+
+其实远远不如……（未完待续）
